vitrail-pg-macros/tests/ui/fail/compound_primary_key_optional_field.stderr
error: primary key field `post_id` must not be optional
  --> tests/ui/fail/compound_primary_key_optional_field.rs:12:15
   |
12 |         @@id([post_id, user_id])
   |               ^^^^^^^
